# liquidflow

./: .env.example  .gitignore  GO-LIVE.md  README.md  SECURITY.md  _devserver.js  campaigns.html  dashboard.html  docs-api.html  docs.html  faucet.html  gateway.html  index.html  integrate-setup.html  liquidflow-landing.html  package-lock.json  package.json  pay.html  payroll-artifact.js  payroll-erc20-artifact.js  payroll.html  potlock-create.html  potlock-fundraiser.html  potlock-private.html  receipt-verify.html  roadmap.html  security.html  theme-toggle.js  vercel.json
api/_lib/: cctp.js  chain.js  confirm.js  crypto.js  payroll.js  platform.js  stealth_ed25519.js  store.js  webhook.js
api/checkout/: [id].js
api/cron/: watch.js
api/fundraisers/: [id].js  index.js
api/merchants/: index.js
api/payments/: [id].js  index.js  recover.js
api/payroll/: [contract].js  index.js
api/simulate/: [id].js
api/swap/: quote.js  relay-mint.js  status.js
liquidflow-backend/: GO-LIVE-STATUS.md  VSCODE-TASKS.md
liquidflow-backend/api/: merchant_api_demo.js
liquidflow-backend/backend/: Cargo.toml  README.md  verify.sh
liquidflow-backend/backend/migrations/: 0001_init.sql  0001_invariants_test.sql
liquidflow-backend/backend/src/: api.rs  auth.rs  lib.rs  main.rs  money.rs  receipts.rs
liquidflow-backend/contracts/: NONEVM_README.md  PayrollSchedulerERC20.compiled.json  STEALTH_GATE.md  compile.js  deploy.js  deployed-eth-sepolia.json  foundry.toml
liquidflow-backend/docs/: audit-pass-evm.md  checkup-report.md  (+4 more)
tools/: stealth-sweep-evm.js
(+30 files in other folders)
